feat(storage): Add IGNORE_STARTUP_PARAMETERS configuration
Add extra_float_digits and search_path parameters for PostgreSQL connection ignore configuration,
to resolve parameter compatibility issues at startup.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -98,6 +98,7 @@ services:
       RESERVE_POOL_SIZE: 5
       RESERVE_POOL_TIMEOUT: 5
       SERVER_RESET_QUERY: DISCARD ALL
+      IGNORE_STARTUP_PARAMETERS: "extra_float_digits,search_path"
 
   storage:
     image: supabase/storage-api:v1.33.5
